Terminada implementacion copia experimentos con QR

--- a/DigiTriadLab/app/src/main/res/values/strings.xml
+++ b/DigiTriadLab/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="bluetooth_le_error">"Some BLE configuration is empty.\n"</string>
     <string name="bluetooth_le_advertise_error">"Some BLE configuration is wrong or empty. Remember that Tx Power should be in range of [-127, 1] and Interval should be in range of [100, 10485759]\n"</string>
     <string name="ok">OK</string>
+    <string name="copy_experiment">Scan this to copy experiment</string>
 </resources>
