Implementado Folder Picker para Google Drive (falta agregar volver a carpeta anterior)

--- a/DigiTriadLab/app/src/main/res/values/strings.xml
+++ b/DigiTriadLab/app/src/main/res/values/strings.xml
@@ -10,22 +10,22 @@
     <string name="run_label">"Run %d"</string>
     <string name="run_date">"Scheduled: %s"</string>
     <string name="save">Save</string>
-    <string name="empty_not_saved">Not saved…</string>
-    <string name="error">"Error: %s"</string>
     <string name="no_description">No description found</string>
     <string name="description_text">"Description:\n%s\n\nConfigurations:\n%s"</string>
-    <string name="no_entries_found">No entries found</string>
     <string name="loading_data">Loading data…</string>
     <string name="scheduled_runs">Scheduled Runs</string>
-    <string name="wifi_configuration">WiFi Scan</string>
     <string name="active_time">Active [s]</string>
     <string name="inactive_time">Inactive [s]</string>
-    <string name="bluetooth_configuration">Bluetooth Scan</string>
     <string name="windows">Windows</string>
+    <string name="wifi_configuration">WiFi Scan</string>
+    <string name="bluetooth_configuration">Bluetooth Scan</string>
     <string name="bluetooth_le_configuration">BLE Scan</string>
-    <string name="title_activity_new_run">New Run</string>
-    <string name="when_run">Schedule this to:</string>
-    <string name="overlapped_run">Overlapped run error…</string>
+    <string name="sensor_configuration">Sensors Scan</string>
+    <string name="cell_configuration">Cells Scan</string>
+    <string name="bluetooth_le_advertise_configuration">BLE Advertise</string>
+    <string name="new_run">New Run</string>
+    <string name="schedule_run">Schedule this to:</string>
+    <string name="invalid_datetime">Invalid datetime</string>
     <string name="device_info_title">Device information</string>
     <string name="save_update">Save / Update</string>
     <string name="device_uuid_title">UUID</string>
@@ -35,7 +35,6 @@
     <string name="new_uuid">Generate New UUID</string>
     <string name="dialog_enable_wifi">WiFi is required to run experiments</string>
     <string name="enable">Enable</string>
-    <string name="bluetooth_le_advertise_configuration">BLE Advertise</string>
     <string name="tx_power_dbm">Tx Power [dBm]</string>
     <string name="interval">Interval [ms]</string>
     <string name="experiment_codename_error">"Experiment requires a codename.\n"</string>
@@ -47,11 +46,12 @@
     <string name="cell_error">"Some Cell configuration is empty.\n"</string>
     <string name="bluetooth_le_advertise_error">"Some BLE configuration is wrong or empty. Remember that Tx Power should be in range of [-127, 1] and Interval should be in range of [100, 10485759]\n"</string>
     <string name="ok">OK</string>
-    <string name="copy_experiment">Scan this to copy experiment</string>
+    <string name="copy_experiment">Copy experiment</string>
     <string name="wifi">Wi-Fi</string>
     <string name="bluetooth">Bluetooth</string>
     <string name="bluetooth_le">Bluetooth LE</string>
     <string name="sensors">Sensors</string>
+    <string name="cell">Cell</string>
     <string name="collected_records">Collected records</string>
     <string name="export">Export</string>
     <string name="dialog_confirm_delete">Are you sure you want to delete?</string>
@@ -60,9 +60,6 @@
     <string name="no">No</string>
     <string name="tags">Tags</string>
     <string name="add_tag">Search or create tag</string>
-    <string name="sensor_configuration">Sensors Scan</string>
-    <string name="cell_configuration">Cells Scan</string>
-    <string name="cell">Cell</string>
     <string name="scan_qr">Scan QR Code</string>
     <string name="delete">Delete Item</string>
     <string name="cancel_run">Cancel this Run</string>
@@ -71,4 +68,18 @@
     <string name="application_logo">Application Logo</string>
     <string name="sign_out">Sign Out</string>
     <string name="upload">Upload to Drive</string>
+    <string name="my_drive">My Drive</string>
+    <string name="shared_drives">Shared Drives</string>
+    <string name="cancel_run_message">Cancel Run first!</string>
+    <string name="files_exported">Files exported...</string>
+    <string name="signed_out">Signed out...</string>
+    <string name="failed_getting_drives">Something failed getting drives!</string>
+    <string name="failed_getting_folders">Something failed getting folders</string>
+    <string name="pick_a_folder">Pick a Folder</string>
+    <string name="add_folder">New Folder</string>
+    <string name="select_drive">Select a Drive</string>
+    <string name="select_folder">Select a Folder</string>
+    <string name="selected_path">Selected Path</string>
+    <string name="not_implemented_yet">Not implemented yet!</string>
+    <string name="pick_folder_message">Please pick a folder!</string>
 </resources>
