--- a/DigiTriadLab/app/src/main/res/values/strings.xml
+++ b/DigiTriadLab/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="invalid_datetime">Invalid datetime</string>
     <string name="device_info_title">Device information</string>
     <string name="save_update">Save / Update</string>
-    <string name="device_uuid_title">UUID</string>
+    <string name="device_uuid_title" translatable="false">UUID</string>
     <string name="no_information">No information available.</string>
     <string name="device_brand_title">Brand</string>
     <string name="device_model_title">Model</string>
@@ -45,11 +45,11 @@
     <string name="sensors_error">"Some Sensors configuration is empty.\n"</string>
     <string name="cell_error">"Some Cell configuration is empty.\n"</string>
     <string name="bluetooth_le_advertise_error">"Some BLE configuration is wrong or empty. Remember that Tx Power should be in range of [-127, 1] and Interval should be in range of [100, 10485759]\n"</string>
-    <string name="ok">OK</string>
+    <string name="ok" translatable="false">OK</string>
     <string name="copy_experiment">Copy experiment</string>
-    <string name="wifi">Wi-Fi</string>
-    <string name="bluetooth">Bluetooth</string>
-    <string name="bluetooth_le">Bluetooth LE</string>
+    <string name="wifi" translatable="false">Wi-Fi</string>
+    <string name="bluetooth" translatable="false">Bluetooth</string>
+    <string name="bluetooth_le" translatable="false">Bluetooth LE</string>
     <string name="sensors">Sensors</string>
     <string name="cell">Cell</string>
     <string name="collected_records">Collected records</string>
@@ -57,7 +57,7 @@
     <string name="dialog_confirm_delete">Are you sure you want to delete?</string>
     <string name="dialog_confirm_cancel">Are you sure you want to cancel?</string>
     <string name="yes">Yes</string>
-    <string name="no">No</string>
+    <string name="no" translatable="false">No</string>
     <string name="tags">Tags</string>
     <string name="add_tag">Search or create tag</string>
     <string name="scan_qr">Scan QR Code</string>
@@ -67,12 +67,12 @@
     <string name="about">About App</string>
     <string name="application_logo">Application Logo</string>
     <string name="sign_out">Sign Out</string>
-    <string name="upload">Upload to Drive</string>
+    <string name="upload">Upload to Google Drive</string>
     <string name="my_drive">My Drive</string>
     <string name="shared_drives">Shared Drives</string>
     <string name="cancel_run_message">Cancel Run first!</string>
-    <string name="files_exported">Files exported...</string>
-    <string name="signed_out">Signed out...</string>
+    <string name="files_exported">Files exported…</string>
+    <string name="signed_out">Signed out…</string>
     <string name="failed_getting_drives">Something failed getting drives!</string>
     <string name="failed_getting_folders">Something failed getting folders</string>
     <string name="pick_a_folder">Pick a Folder</string>
@@ -82,4 +82,10 @@
     <string name="selected_path">Selected Path</string>
     <string name="not_implemented_yet">Not implemented yet!</string>
     <string name="pick_folder_message">Please pick a folder!</string>
+    <string name="uploading_to_folder">Uploading to %s</string>
+    <string name="failed_uploading">Failed uploading data!</string>
+    <string name="failed_creating">Failed creating Google Drive File</string>
+    <string name="go_back">Go Back</string>
+    <string name="signed_as">Signed in as %s</string>
+    <string name="unc_edu_ar_account">Remember to sign in with an unc.edu.ar account</string>
 </resources>
