--- a/DigiTriadLab/app/src/main/res/values/strings.xml
+++ b/DigiTriadLab/app/src/main/res/values/strings.xml
@@ -90,4 +90,5 @@
     <string name="unc_edu_ar_account">Remember to sign in with an unc.edu.ar account</string>
     <string name="sign_in_first">Please sign in to Google first!</string>
     <string name="cancel_run_first">Cancel the ongoing Run first!</string>
+    <string name="invalid_uuid">Invalid UUID</string>
 </resources>
