--- a/DigiTriadLab/app/src/main/res/values-es-rAR/strings.xml
+++ b/DigiTriadLab/app/src/main/res/values-es-rAR/strings.xml
@@ -88,4 +88,5 @@
     <string name="invalid_uuid">UUID inválido</string>
     <string name="duplicate">Duplicar</string>
     <string name="edit">Editar</string>
+    <string name="max_random_time">Random Time [min]</string>
 </resources>
