--- a/DigiTriadLab/app/src/main/res/values/strings.xml
+++ b/DigiTriadLab/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="invalid_uuid">Invalid UUID</string>
     <string name="duplicate">Duplicate</string>
     <string name="edit">Edit</string>
+    <string name="max_random_time">Random Time [min]</string>
 </resources>
