correcciones y nuevo mecanismo de baliza

--- a/DigiTriadLab/app/src/main/res/values/strings.xml
+++ b/DigiTriadLab/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="duplicate">Duplicate</string>
     <string name="edit">Edit</string>
     <string name="max_random_time">Random Time [min]</string>
+    <string name="change_screen_behaviour">Change Screen Behaviour</string>
 </resources>
