--- a/DigiTriadLab/app/src/main/res/values-es-rAR/strings.xml
+++ b/DigiTriadLab/app/src/main/res/values-es-rAR/strings.xml
@@ -89,4 +89,5 @@
     <string name="duplicate">Duplicar</string>
     <string name="edit">Editar</string>
     <string name="max_random_time">Random Time [min]</string>
+    <string name="change_screen_behaviour">Change Screen Behaviour</string>
 </resources>
