--- a/DigiTriadLab/app/src/main/res/values/strings.xml
+++ b/DigiTriadLab/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="cell_error">"Some Cell configuration is empty.\n"</string>
     <string name="gps_error">"Some GPS configuration is empty.\n"</string>
     <string name="battery_error">"Some Battery configuration is empty.\n"</string>
+    <string name="activity_error">"Some Activity configuration is empty.\n"</string>
     <string name="bluetooth_le_advertise_error">"Some BLE configuration is wrong or empty. Remember that Tx Power should be in range of [-127, 1] and Interval should be in range of [100, 10485759]\n"</string>
     <string name="ok" translatable="false">OK</string>
     <string name="copy_experiment">Copy experiment</string>
@@ -59,6 +60,7 @@
     <string name="cell">Cell</string>
     <string name="gps">GPS</string>
     <string name="battery">Battery</string>
+    <string name="activity">Activity</string>
     <string name="collected_records">Collected records</string>
     <string name="export">Export</string>
     <string name="dialog_confirm_delete">Are you sure you want to delete?</string>
